<resources>
    <string name="app_name">Animacion 2D</string>
    <string name="ready">Ready?</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="select_a_difficulty">Select a difficulty</string>
    <string name="how_many_balls_did_you_count">How many balls did you count?</string>
    <string name="check">Check</string>
    <string name="etCountEmpty">Count field is empty!</string>
    <string name="loseText">Ooops, you lose...</string>
    <string name="winText">YOU WIN!</string>
    <string name="restart">Restart</string>
    <string name="blue">Blue:</string>
    <string name="cyan">Cyan:</string>
    <string name="green">Green:</string>
    <string name="black">Black:</string>
    <string name="gray">Gray:</string>
    <string name="yellow">Yellow:</string>
    <string name="red">Red:</string>
    <string name="magenta">Magenta:</string>
    <string name="todo">todo</string>
    <string name="load_image">load image</string>
</resources>